Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1, 10.2, 10.3
-
Fix Version/s: 10.3.1
-
Component/s: Data types, Views
-
Labels:
Description
DROP TABLE IF EXISTS t1; |
CREATE TABLE t1 (a INT); |
CREATE OR REPLACE VIEW v1 AS SELECT COALESCE(a) FROM t1; |
DESCRIBE v1;
|
+-------------+------------+------+-----+---------+-------+
|
| Field | Type | Null | Key | Default | Extra |
|
+-------------+------------+------+-----+---------+-------+
|
| COALESCE(a) | bigint(11) | YES | | NULL | |
|
+-------------+------------+------+-----+---------+-------+
|
Notice, the column data type is bigint. The expected data type is int, like in the table t1.